kubernetes-configs/api-hanan-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-hanan
  namespace: prod-hanan
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-hanan
  template:
    metadata:
      labels:
        app: api-hanan
    spec:
      containers:
      - name: api-hanan
        image: hanangh/api-hanan:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
