kubernetes-configs/api-hanan-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-hanan
  namespace: prod-hanan
spec:
  selector:
    app: api-hanan
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
