kubernetes-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hanan-ingress
  namespace: prod-hanan
spec:
  ingressClassName: nginx
  rules:
  - host: api.hanan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-hanan
            port:
              number: 80
