kubernetes-configs/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-auth
  namespace: prod-hanan
spec:
  podSelector:
    matchLabels:
      app: auth-hanan
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api-hanan
